# rusted-geom

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  rusted-geom.sln  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  (+1 more)
crates/kernel/: Cargo.toml  README.md
crates/kernel-ffi/: Cargo.toml
crates/kernel-ffi/benches/: brep_bench.rs
crates/kernel-ffi/src/: kernel_impl.rs  lib.rs
crates/kernel-ffi/src/elements/: mod.rs
crates/kernel-ffi/src/elements/brep/: bridge.rs  ids.rs  types.rs
crates/kernel-ffi/src/elements/curve/: constructors.rs  convert.rs  eval.rs  length.rs  types.rs
crates/kernel-ffi/src/elements/face/: heal.rs  loops.rs  tessellate.rs  types.rs  validate.rs
crates/kernel-ffi/src/elements/intersection/: branch_io.rs  to_curve.rs  types.rs
crates/kernel-ffi/src/elements/mesh/: access.rs  boolean.rs  constructors.rs  types.rs
crates/kernel-ffi/src/elements/surface/: constructors.rs  eval.rs  tessellate.rs  types.rs
crates/kernel-ffi/src/ffi/: ptr.rs
crates/kernel-ffi/src/ffi/exports/: bounds.rs  brep.rs  curve.rs  face.rs  intersection.rs  kernel.rs  memory.rs  mesh.rs  mod.rs  surface.rs
crates/kernel-ffi/src/kernel_impl/: bounds_ops.rs  brep_ops.rs  curve_geometry.rs  curve_surface_ops_a.rs  curve_surface_ops_c.rs  ffi_curve.rs  ffi_face.rs  ffi_impl.rs  ffi_kernel.rs  ffi_mesh.rs  ffi_ptr.rs  foundation.rs  intersection_mesh_ops_a.rs  intersection_mesh_ops_b.rs  intersection_mesh_ops_c.rs  surface_face_intersections_a.rs  surface_face_intersections_b.rs  surface_face_intersections_c.rs
crates/kernel-ffi/src/math/: arc_length.rs  basis.rs  bounds.rs  frame.rs  intersections.rs  mod.rs  nurbs_curve_eval.rs  nurbs_surface_eval.rs
crates/kernel-ffi/src/ops/: transform.rs
crates/kernel-ffi/src/ops/intersections/: curve_curve.rs  curve_plane.rs  mesh_mesh.rs  mesh_plane.rs  surface_curve.rs  surface_plane.rs  surface_surface.rs
crates/kernel-ffi/src/session/: mod.rs  objects.rs  store.rs
crates/kernel-ffi/src/tests/: helpers.rs  kernel_ffi.rs  test_bounds.rs  test_brep.rs  test_curves.rs  test_meshes.rs  test_session.rs  test_surfaces.rs
crates/kernel-ffi/src/wasm/: bounds.rs  brep.rs  error.rs  face.rs  intersection.rs  mod.rs
crates/kernel/benches/: bounds_bench.rs  brep_bench.rs  curve_bench.rs  face_bench.rs  intersection_bench.rs  landxml_bench.rs  mesh_bench.rs  surface_bench.rs
crates/kernel/benches/common/: mod.rs
crates/kernel/src/: kernel_impl.rs  lib.rs
crates/kernel/src/elements/brep/: io.rs  mod.rs  types.rs  validate.rs
crates/kernel/src/kernel_impl/: bounds_ops.rs  curve_geometry.rs  curve_surface_ops_a.rs  curve_surface_ops_b.rs  curve_surface_ops_c.rs  ffi_bounds.rs  ffi_brep.rs  ffi_curve.rs  ffi_impl.rs  ffi_intersection.rs  ffi_kernel.rs  ffi_memory.rs  ffi_surface.rs  ffi_volume.rs  foundation.rs  gltf_writer.rs  iges_writer.rs  intersection_mesh_ops_a.rs  intersection_mesh_ops_b.rs  intersection_mesh_ops_c.rs  sat_writer.rs  stl_writer.rs  surface_face_intersections_a.rs  surface_face_intersections_b.rs  surface_face_intersections_c.rs  sweep_loft_ops.rs  usd_convert.rs  volume_ops.rs
crates/kernel/src/landxml/: alignment3d.rs  error.rs  horizontal.rs  mod.rs  parser.rs  spiral.rs  station.rs  terrain.rs  types.rs  vertical.rs
crates/kernel/src/math/: arc_length.rs  basis.rs  bounds.rs  frame.rs  intersections.rs  mod.rs  nurbs_curve_eval.rs  nurbs_surface_eval.rs  vec3.rs
crates/kernel/src/session/: objects.rs  store.rs
crates/kernel/src/tests/: helpers.rs  mod.rs  test_bounds.rs  test_intersections.rs  test_surfaces.rs  test_sweep_loft.rs  test_usda_export.rs  test_volume_csg.rs
crates/kernel/src/wasm/: curve.rs  error.rs  io.rs  landxml.rs  mesh.rs  mod.rs  surface.rs
include/: rusted_geom.h
plans/: excel-parser.md  kernel_cleanup_+_real_benchmarks_plan_dc277e8b.plan.md  landxml-parser.md
scripts/: build_kernel_wasm.sh  check_abi_compat.sh  check_benchmark_thresholds.py  check_bindings.sh  check_modularity.sh  check_wasm_size.sh  generate_bindings.sh  pack_dotnet.sh  pack_web.sh  stage_dotnet_natives.sh  stage_web_wasm.sh  sync_labels.sh  update_abi_baseline.sh  watch_kernel.sh
showcase/: .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  vercel.json
todos/: binding-codegen.md
tools/abi-gen/: Cargo.toml
tools/abi-gen/src/: main.rs
xtask/: Cargo.toml
(+133 files in other folders)
