[workspace]
members = [
  "crates/kernel-abi-meta",
  "crates/kernel-ffi",
  "tools/abi-gen",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["RustedGeom Contributors"]

[workspace.dependencies]
anyhow = "1.0"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
walkdir = "2.5"
rayon = "1.10"
