[package]
name = "kernel-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rusted_geom"
crate-type = ["rlib", "cdylib"]

[dependencies]
boolmesh = "0.1.9"
kernel-abi-meta = { path = "../kernel-abi-meta" }
once_cell.workspace = true

[dev-dependencies]
serde_json.workspace = true
