[package]
name = "kernel-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rusted_geom"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "brep_bench"
harness = false

[dependencies]
bincode = "2.0.1"
boolmesh = "0.1.9"
dashmap = "6.1"
index_vec = "0.1.4"
kernel-abi-meta = { path = "../kernel-abi-meta" }
once_cell.workspace = true
parking_lot = "0.12"
rayon.workspace = true
smallvec = { version = "1.15", features = ["union"] }

[dev-dependencies]
codspeed-criterion-compat = "2.10"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json.workspace = true
