[package]
name = "abi-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "abi-gen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syn.workspace = true
toml.workspace = true
walkdir.workspace = true
